# CartratBot

./: .gitignore  .gitigonore  pyproject.toml
postgres_data/: ERD_sсheme.pgerd
postgres_data/PG_16_202307071/34253/: 112  113  1247  1247_fsm  1247_vm  1249  1249_fsm  1249_vm  1255  1255_fsm  1255_vm  1259  1259_fsm  1259_vm  14827  14827_fsm  14827_vm  14831  14832  14832_fsm  14832_vm  14836  14837  14837_fsm  14837_vm  14841  14842  14842_fsm  14842_vm  14846  174  175  2187  2224  2228  2337  2579  2600  2600_fsm  2600_vm  (+274 more)
src/cartratbot/: db.py  main.py
