[project]
name = "cartratbot"
version = "0.1.0"
description = ""
authors = [
    {name = "Egor Khudiakov",email = "eh83865@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "cartratbot", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
